--- a/app/views/advertisements/_locations.html.slim
+++ b/app/views/advertisements/_locations.html.slim
@@ -6,49 +6,8 @@ legend Местоположение
       | место
     .col-sm-9.form.form-horizontal
       span.button-toolbar
-        #region-select-button.button.btn.btn-default data-target=".lbs-example-modal-lg" data-toggle="modal"
-          | Выберите город
-          i.caret
-        #region-select-modal.modal.fade.lbs-example-modal-lg aria-hidden="true" aria-labelledby="myLargeModalLabel1" role="dialog" tabindex="-2"
-          .modal-dialog
-            .row.modal-content
-              .modal-header
-                button.close aria-hidden="true" data-dismiss="modal" type="button"  &times;
-                h4.modal-title Выберите местоположение
-              .row.modal-body
-                .btn-group data-toggle="buttons"
-                  - @regions.each do |region|
-                    .row.col-sm-12
-                      label= region.title
-                    - Location.children_of(region.id).each do |city|
-                      label.btn.btn-default type="button"
-                        /input type="radio" name="city_id" value="#{city.id}" class="region" =city.title
-                        = f.radio_button :city_id, city.id
-                        = city.title
+        .all-selected-locations
 
-              .modal-footer
-                span.pull-left
-                  span.small для уточнений:
-                  a.btn.btn-link.btn-sm href="mailto:mesto@multilisting.su"  mesto@multilisting.su
-                button.btn.btn-default data-dismiss="modal" type="button"  Отмена
-                button.btn.btn-primary onclick="select_region('radio');" type="button"  Выбрать
-      .btn-group.btn-group
-        .btn-group.btn-group
-          #city-select-button.button.btn.btn-default data-target=".bs-example-modal-lg" data-toggle="modal"
-            | Выберите район
-            i.caret
-          #city-select-modal.modal.fade.bs-example-modal-lg aria-hidden="true" aria-labelledby="myLargeModalLabel2" role="dialog" tabindex="-1"
-            .modal-dialog
-              .row.modal-content
-                .modal-header
-                  button.close aria-hidden="true" data-dismiss="modal" type="button"  &times;
-                  h4.modal-title Выберите район
-                #cities-list.row.modal-body
-                .modal-footer
-                  span.pull-left
-                    span.small для уточнений:
-                    a.btn.btn-link.btn-sm href="mailto:mesto@multilisting.su"  mesto@multilisting.su
-                  button.btn.btn-default data-dismiss="modal" type="button"  Отмена
-                  button.btn.btn-primary.SelectDistrict mv='city-select-modal' type="button"  Выбрать
-        button.btn.btn-default type="button"
-          span.fa.fa-times
+        .location-select-button.button.btn.btn-default.GetChildren lid="#{id}" multi="#{multi}"
+          | Выберите местоположение
+          i.caret
