--- a/app/views/advertisements/new.html.slim
+++ b/app/views/advertisements/new.html.slim
@@ -8,6 +8,14 @@ h1 Новое объявление
     = f.hidden_field :latitude, class: 'latitude-value'
     = f.hidden_field :longitude, class: 'longitude-value'
     = f.hidden_field :user_id, value: '', class: 'user-id'
+    = f.hidden_field :region_id, value: '', class: 'region-id'
+    = f.hidden_field :city_id, value: '', class: 'city-id'
+    = f.hidden_field :district_id, value: '', class: 'district-id'
+    = f.hidden_field :admin_area_id, value: '', class: 'admin_aria-id'
+    = f.hidden_field :non_admin_area_id, value: '', class: 'non_admin_area-id'
+    = f.hidden_field :street_id, value: '', class: 'street-id'
+    = f.hidden_field :address_id, value: '', class: 'address-id'
+    = f.hidden_field :landmark_id, value: '', class: 'landmark-id'
     = render '/advertisements/user', f: f
     .adv-params class="#{can?(:create_from_admin, @adv) ? 'hidden' : ''}"
       legend Раздел
@@ -27,7 +35,10 @@ h1 Новое объявление
                 label.btn.btn-default.AdvProperty hid="category" multi="one" value="#{AdvEnums::CATEGORIES.index(category)}"
                   = f.radio_button :category,  "#{category}"
                   = t "advertisement.category.#{category}"
-      = render '/advertisements/locations', f: f
+      = render partial: 'advertisements/locations', locals: { id: 0, multi: 'radio' }
+      .modal-form-here
+        = render 'advertisements/modal_select_location', locations: @locations
+      /= render '/advertisements/locations', f: f
       = render '/advertisements/map', f: f
       = render '/advertisements/photos', f: f
       .fields
