--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,4 +21,7 @@
 
 @import "vendor/blueimp-gallery.min";
 @import "vendor/jquery.fileupload";
-@import "vendor/jquery.fileupload-ui";
+@import "vendor/daterangepicker-bs3";
+
+
+@import "common";
