--- a/app/views/advertisements/_attributes.html.slim
+++ b/app/views/advertisements/_attributes.html.slim
@@ -2,7 +2,7 @@
   .form-group
     - attr_from = group[0]
     - attr_to = group[1]
-    = render_input attr_from.to_sym, attr_from.to_sym, attr_to ? attr_to.to_sym : nil, attr_to ? attr_to.to_sym : nil
+    = render_input attr_from.to_sym, (attr_to ? attr_to.to_sym : nil), (defined?(f) ? f.object.send(attr_from) : nil), (attr_to && defined?(f) ? f.object.send(attr_to) : nil)
 
 
 
