--- a/app/views/advertisements/check_phone.js.erb
+++ b/app/views/advertisements/check_phone.js.erb
@@ -1,10 +1,10 @@
-$('.user-id').prop('value',"<%= @user_id %>");
-<% if @advertisements.present? %>
-$('.advertisements-duplicate').html("<%= j render 'advertisements/search_results', search_results:  @advertisements %>" );
-$('.show-phones').modal('show');
-<% elsif @user_id.present? %>
-alert('Пользователь с таким email уже есть в базе');
+$('.user-id').prop('value', "<%= @user_id %>");
+<% if @search_results.present? %>
+    $('<%= j (render('advertisements/form_duplicate')) %>').modal('show');
+    $('#myModal').on('hidden.bs.modal', function (e) {
+        // do something...
+    })
 <% else %>
-$('.adv-params').removeClass('hidden');
-$('.user-params').addClass('hidden');
+    $('.adv-params').removeClass('hidden');
+    $('.user-params').addClass('hidden');
 <% end %>
