--- a/app/views/advertisements/index.html.slim
+++ b/app/views/advertisements/index.html.slim
@@ -1,123 +1,35 @@
-= render 'advertisements/neighbors', locale: { neighbors: @neigbors } if @neighbors
+- if @root_section.present?
+  - if @root_section.title.present?
+    = content_for :title
+      = @root_section.title
+  - if @root_section.description.present? && @root_section.keywords.present?
+    = content_for :meta
+      meta name="description" content=@root_section.description
+      meta name="keywords" content=@root_section.keywords
+= render 'advertisements/neighbors', locale: { neighbors: @neigbors } if @neighbors.present?
 .jumbotron
   h1
     i.fa.fa-database
-    | Платная база недвижимости
+    '
+    - if @root_section.present? && @root_section.h1.present?
+      = @root_section.h1
   p.lead
     | Ежедневные поступления от собственников и риэлторов.
   p
     = link_to render_html_tag(tag: 'i', class: 'fa fa-plus fa-lg', text: 'Добавить объявление'), new_advertisement_path, class: 'btn btn-primary btn-lg'
-.well
-  .row-fluid
-    span.h2
-      i.fa.fa-crosshairs.fa-lg
-      '
-      | Поиск точно в цель
-  = render 'advertisements/search_form'
-
-.well
-  span.h2
-    i.fa.fa-check.fa-lg
-    | Реальные объявления отдельно от спама и повторов
-    a.btn.btn-info.btn-xs
-      i.fa.fa-info-circle.fa-lg
-      | как это сделано
-  p
-  div
+= render 'advertisements/search_form'
+.well.well-sm.clearfix
+  span
     i.fa.fa-list.fa-lg
     '
     | Найдено
     '
-    b 168
+    b = @search_result_count
     '
-    | объявлений.
+    = Russian.p(@search_result_count.to_i, "объявление", "объявления", "объявлений")
     '
-    .btn-group
-      a.btn.btn-default.btn-xs
-        i.fa.fa-check-square-o.fa-lg
-        | выбрать все
-      a.btn.btn-default.btn-xs
-        i.fa.fa-print.fa-lg
-        | печатать
-      a.btn.btn-default.btn-xs
-        i.fa.fa-book.fa-lg
-        | блокнот
-    | 1-50
-    .btn-group
-      button.btn.btn-default.disabled.btn-xs type="button"
-        i.fa.fa-arrow-left
-        | пред.
-      .btn-group
-        button.btn.btn-default.dropdown-toggle.btn-xs data-toggle="dropdown" type="button"
-          | 1
-          span.caret
-        .dropdown-menu style=("padding: 5px")
-          form.small
-            label.form-label.horizontal № страницы
-            .input-group.input-group-xs
-              input.form-control type="text"
-                span.input-group-btn
-                  button.btn.btn-default type="button"  Перейти
-      button.btn.btn-default.btn-xs type="button"
-        | след.
-        i.fa.fa-arrow-right
-    .btn-group
-      .button-dropdown
-        a.btn.btn-default.dropdown-toggle.btn-xs data-toggle="dropdown" href="#"
-          i.fa.fa-list
-          | 30 на страницу
-          span.caret
-        ul.dropdown-menu
-          li
-            a href="#"  50 на страницу
-          li
-            a href="#"  100 на страницу
-          li
-            a href="#"  300 на страницу
-          li
-            a href="#"  500 на страницу
-    .btn-group
-      .button-dropdown
-        a.btn.btn-default.dropdown-toggle.btn-xs data-toggle="dropdown" href="#"
-          i.fa.fa-sort-amount-desc
-          | по рейтингу
-          span.caret
-        ul.dropdown-menu
-          li
-            a href="#"  по дате
-  p
-  #search-results
+    | недвижимости
 
-  /! end ads
-  .pagination
-    li.disabled
-      a href="#"
-        i.fa.fa-arrow-left
-        | сюда
-    li.disabled
-      a href="#"  1
-    li
-      a href="#"  2
-    li
-      a href="#"  3
-    li
-      a href="#"  4
-    li
-      a href="#"  5
-    li
-      a href="#"  ....
-    li
-      a href="#"  6
-    li
-      a href="#"  7
-    li
-      a href="#"  8
-    li
-      a href="#"  9
-    li
-      a href="#"  10
-    li
-      a href="#"
-        | туда
-        i.fa.fa-arrow-right
-/! колонка рейтинга
+  = render 'advertisements/search_results'
+  = render 'shared/pagination', :pages => @pages, :current_page => params[:page].to_i, :url_path => method(:root_path), :url_params => params
+
