--- a/app/views/advertisements/inputs/_boolean.html.slim
+++ b/app/views/advertisements/inputs/_boolean.html.slim
@@ -3,5 +3,5 @@
   .col-sm-2
     .checkbox
       label
-        = check_box_tag("advertisement[#{name_from}]", value_from)
+        = check_box_tag("advertisement[#{name_from}]", 1, value_from)
         = t("advertisement.attributes.#{name_from}")
