--- a/app/views/advertisements/new.html.slim
+++ b/app/views/advertisements/new.html.slim
@@ -1,47 +1,1 @@
-.error
-  = @adv.errors.messages if !@adv.errors.blank?
-h1 Новое объявление
-.well.well-sm
-  = nested_form_for @adv, html: {multipart: true, class: 'fileupload'} do |f|
-    = f.hidden_field :adv_type, value: '', class: 'adv-type-value'
-    = f.hidden_field :property_type, value: '', class: 'property-type-value'
-    = f.hidden_field :latitude, class: 'latitude-value'
-    = f.hidden_field :longitude, class: 'longitude-value'
-    = f.hidden_field :user_id, value: '', class: 'user-id'
-    = f.hidden_field :region_id, value: '', class: 'region-id'
-    = f.hidden_field :city_id, value: '', class: 'city-id'
-    = f.hidden_field :district_id, value: '', class: 'district-id'
-    = f.hidden_field :admin_area_id, value: '', class: 'admin_aria-id'
-    = f.hidden_field :non_admin_area_id, value: '', class: 'non_admin_area-id'
-    = f.hidden_field :street_id, value: '', class: 'street-id'
-    = f.hidden_field :address_id, value: '', class: 'address-id'
-    = f.hidden_field :landmark_id, value: '', class: 'landmark-id'
-    = render '/advertisements/user', f: f
-    .adv-params class="#{can?(:create_from_admin, @adv) ? 'hidden' : ''}"
-      legend Раздел
-      .form.form-horizontal role="form"
-        .form-group
-          label.col-sm-3.control-label for="offer_type" Вид сделки
-          .col-sm-9.btn-group.btn-group data-toggle="buttons"
-            - AdvEnums::OFFER_TYPES.each_with_index do |offer|
-              label.btn.btn-default.AdvProperty hid="offer" multi="one" value="#{AdvEnums::OFFER_TYPES.index(offer)}"
-                = f.radio_button :offer_type,  "#{offer}"
-                = t("advertisement.offer.#{offer}")
-        .form-group
-          label.col-sm-3.control-label for="category" Тип недвижимости
-          .col-sm-9.btn-toolbar
-            .btn-group.btn-group data-toggle="buttons"
-              - AdvEnums::CATEGORIES.each do |category|
-                label.btn.btn-default.AdvProperty hid="category" multi="one" value="#{AdvEnums::CATEGORIES.index(category)}"
-                  = f.radio_button :category,  "#{category}"
-                  = t "advertisement.category.#{category}"
-      = render partial: 'advertisements/locations', locals: { id: 0, multi: 'radio' }
-      .modal-form-here
-        = render 'advertisements/modal_select_location', locations: @locations
-      /= render '/advertisements/locations', f: f
-      = render '/advertisements/map', f: f
-      = render '/advertisements/photos', f: f
-      .fields
-        .form.form-horizontal
-          = f.submit 'Create', class: 'btn btn-primary'
-
+= render 'advertisements/form'
