Almost done. Style tag removed from views, search_form as on provided html, time rendering bug - don't know how to fix it right way - monkey patch this time. TODO fix time localization problem - why default format not working..

--- a/app/views/advertisements/_neighbors.html.slim
+++ b/app/views/advertisements/_neighbors.html.slim
@@ -1,5 +1,5 @@
 span.h4 с нами:
   -neighbors.each do |location|
     a href="/cityname"
-      span style=("font-size: 14px;")
+      span.location-title
         = location.title
