--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -1,46 +1,43 @@
 .well.well-sm
   = form_tag root_path, method: :get, class: 'form form-inline', role:'form'
-    .row
+    /.form.form-inline
+    /.row
       span.h2
         i.fa.fa-crosshairs.fa-lg
         '
         | Удобный поиск точно в цель
-    .row
-      label.control-label
+    .form-group
+      label
         i.fa.fa-share.fa-lg
         '
         | предложение
+    '
+    .btn-group data-toggle="buttons"
+       - [:sale, :for_rent, :day].each do |offer|
+        - active = ((@section.present? ? [@section.attributes[:offer_type.to_s].to_s] : params[:advertisement][:offer_type]) || []).include?(AdvEnums::OFFER_TYPES.index(offer).to_s)
+        label.btn.btn-default class="#{'active' if active}"
+          input type="checkbox" name="advertisement[offer_type][]" value="#{AdvEnums::OFFER_TYPES.index(offer)}" checked=active = t("advertisement.offer.#{offer}")
+    '
+    label.control-label
+      i.fa.fa-reply.fa-lg
       '
-      .btn-group data-toggle="buttons"
-         - [:sale, :for_rent, :day].each do |offer|
-          - active = ((@section.present? ? [@section.attributes[:offer_type.to_s].to_s] : params[:advertisement][:offer_type]) || []).include?(AdvEnums::OFFER_TYPES.index(offer).to_s)
-          label.btn.btn-default class="#{'active' if active}"
-            input type="checkbox" name="advertisement[offer_type][]" value="#{AdvEnums::OFFER_TYPES.index(offer)}" checked=active = t("advertisement.offer.#{offer}")
-      '
-      label.control-label
-        i.fa.fa-reply.fa-lg
+      | спрос
+    '
+    .btn-group data-toggle="buttons"
+      - [:buy, :rent].each do |offer|
+        - active = ((@section.present? ? [@section.attributes[:offer_type.to_s].to_s] : params[:advertisement][:offer_type]) || []).include?(AdvEnums::OFFER_TYPES.index(offer).to_s)
+        label.btn.btn-default class="#{'active' if active}"
+          input type="checkbox" name="advertisement[offer_type][]" value="#{AdvEnums::OFFER_TYPES.index(offer)}" checked=active = t("advertisement.offer.#{offer}")
+    '
+    /ARE we seriously do not need this checkbox????
+    /.btn-group data-toggle="buttons"
+      label.btn.btn-success class="#{('active' if params[:advertisement][:not_for_agents]=='1')}"
+        i.fa.fa-ban.fa-lg
         '
-        | спрос
-      '
-      .btn-group data-toggle="buttons"
-        - [:buy, :rent].each do |offer|
-          - active = ((@section.present? ? [@section.attributes[:offer_type.to_s].to_s] : params[:advertisement][:offer_type]) || []).include?(AdvEnums::OFFER_TYPES.index(offer).to_s)
-          label.btn.btn-default class="#{'active' if active}"
-            input type="checkbox" name="advertisement[offer_type][]" value="#{AdvEnums::OFFER_TYPES.index(offer)}" checked=active = t("advertisement.offer.#{offer}")
-      '
-      .btn-group data-toggle="buttons"
-        label.btn.btn-success class="#{('active' if params[:advertisement][:not_for_agents]=='1')}"
-          i.fa.fa-ban.fa-lg
-          '
-          input type="checkbox" name="advertisement[not_for_agents]" value="1" checked=(params[:advertisement][:not_for_agents]=='1')
-            | без агентов
-      '
-      .input-prepend.input-group
-        span.add-on.input-group-addon
-          i.glyphicon.glyphicon-calendar.fa.fa-calendar
-        input.range_date_picker_action.form-control name="advertisement[date_interval]" type="text" value=params[:advertisement][:date_interval].presence
+        input type="checkbox" name="advertisement[not_for_agents]" value="1" checked=(params[:advertisement][:not_for_agents]=='1')
+          | без агентов
 
-    .row
+    .form-group
       label.control-label
         i.fa.fa-building
         '
@@ -51,7 +48,7 @@
           - active = ((@section.present? ? [@section.attributes[:category.to_s].to_s] : params[:advertisement][:category]) || []).include?(AdvEnums::CATEGORIES.index(category).to_s) || (@section.present? && @section.residental?)
           label.btn.btn-default class="#{'active' if active}"
             input type="checkbox" name="advertisement[category][]" value="#{AdvEnums::CATEGORIES.index(category)}" checked=active = t("advertisement.category.#{category}")
-    .row
+    .form-group
       label.control-label
         i.fa.fa-briefcase
         '
@@ -62,15 +59,15 @@
           - active = ((@section.present? ? [@section.attributes[:category.to_s].to_s] : params[:advertisement][:category]) || []).include?(AdvEnums::CATEGORIES.index(category).to_s) || (@section.present? && @section.commerce?)
           label.btn.btn-default class="#{'active' if active}"
             input type="checkbox" name="advertisement[category][]" value="#{AdvEnums::CATEGORIES.index(category)}" checked=active = t("advertisement.category.#{category}")
-    .row
-      label.control-label
+    .col-xs-12.row.form-group
+      label
         i.fa.fa-map-marker.fa-lg
         '
         | место
       '
       span.button-toolbar
         .location-group multi=true state="#{@location_state}"
-          .button.btn.btn-default.GetChildren lid="#{0}" data-toggle="dropdown"
+          .button.btn.btn-default.btn-lg.GetChildren lid="#{0}" data-toggle="dropdown"
             i.fa.fa-globe.fa-lg
             '
             | выберите местоположение
@@ -81,36 +78,104 @@
               = link_to section.title, section.url, class: 'button btn btn-default location_hide_action'
 
     .row
-      label
-        i.fa.fa-rouble.fa-lg
-        '
-        | цена
-      '
-      input.form-control style="width: 110px" placeholder="от" name="advertisement[price_from]" type="text" value=params[:advertisement][:price_from]
-      '
-      label —
-      '
-      input.form-control style="width: 110px" placeholder="до" name="advertisement[price_to]" type="text" value=params[:advertisement][:price_to]
-      '
-      .btn-group data-toggle="buttons"
-        label.btn.btn.btn-default class="#{('active' if params[:advertisement][:mortgage]=='1')}"
-          i.fa.fa-bank
+      .col-sm-9.col-xs-12
+        .form-group
+          label
+            i.fa.fa-rouble.fa-lg
+            '
+            | цена
           '
-          input type="checkbox" name="advertisement[mortgage]" value="1" checked=(params[:advertisement][:mortgage]=='1')
-            | в ипотеку
-      '
-
-      input.form-control placeholder="ключевые слова, № телефона или объявления" style="width: 340px" type="text" name="advertisement[description]" value=params[:advertisement][:description]
-      '
-      button.btn.btn-primary.btn-lg type="submit"
-        i.fa.fa-search.fa-lg
+          input.text-input-lg.form-control  placeholder="от" name="advertisement[price_from]" type="text" value=params[:advertisement][:price_from]
+          '
+          label —
+          '
+          input.text-input-lg.form-control  placeholder="до" name="advertisement[price_to]" type="text" value=params[:advertisement][:price_to]
+          '
+          /MMM... Needs to implement logic here!!
+          .btn-group
+            a.btn.btn-default.dropdown-toggle.btn-xs data-toggle="dropdown"
+              | за всё
+              span.caret
+            ul.dropdown-menu role="menu"
+              li
+                a href="#"  за м&sup2;
+              li
+                a href="#"  за сотку
+        .form-group
+          .btn-group data-toggle="buttons"
+            .btn.btn-success.btn-xs
+              i.fa.fa-check.fa-lg
+              | частные
+            .btn.btn.btn-xs.bc-white class="#{('active' if params[:advertisement][:mortgage]=='1')}"
+              i.fa.fa-bank
+              input type="checkbox" name="advertisement[mortgage]" value="1" checked=(params[:advertisement][:mortgage]=='1')
+              | ипотека
         '
-        | Найти
-
-      a.btn.btn-link.btn-xs
-        i.fa.fa-times
+        .form-group
+          label комнат
+          span.btn-group data-toggle="buttons"
+            a.btn.btn-default.btn-sm 1
+            a.btn.btn-default.btn-sm 2
+            a.btn.btn-default.btn-sm 3
+            a.btn.btn-default.btn-sm 4+
         '
-        | очистить
+        .form-group
+          label площадь
+          input.text-input-m#example2  /
+          label for="exampleInputPassword2"  —
+          input.text-input-m#exampleInputPassword2  type="text" /
+          a.btn.btn-default.btn-xs.disabled
+            | м&sup2;
+            span.caret
+        '
+        .form-group
+          label этаж
+          input.text-input-sx#example2  /
+          label for="exampleInputPassword2"  —
+          input.text-input-sx#exampleInputPassword2  type="text" /
+        '
+        .form-group
+          label этажей
+          input.text-input-sx#example2  /
+          label for="exampleInputPassword2"  —
+          input.text-input-sx#exampleInputPassword2  type="text" /
+        '
+        .form-group
+          | за всё время
+          '
+          .input-prepend.input-group
+            span.add-on.input-group-addon
+              i.glyphicon.glyphicon-calendar.fa.fa-calendar
+            input.range_date_picker_action.form-control name="advertisement[date_interval]" type="text" value=params[:advertisement][:date_interval].presence
+        '
+        .form-group
+          label
+            i.fa.fa-sort-amount-desc
+          .btn-group
+            .button-dropdown
+              a.btn.btn-default.dropdown-toggle.btn-xs data-toggle="dropdown" href="#"
+                | по рейтингу
+                span.caret
+              ul.dropdown-menu
+                li
+                  a href="#"  по дате
+        '
+        .form-group
+            input.text-input-xl.form-control placeholder="ключевые слова, № телефона или объявления" type="text" name="advertisement[description]" value=params[:advertisement][:description]
+      .col-sm-3
+        button.btn.btn-primary.btn-lg.pull-left type="submit"
+          i.fa.fa-search.fa-lg
+          '
+          | Найти
+
+        span.pull-left
+          a.btn.btn-link.btn-xs
+            i.fa.fa-times очистить
+          br/
+          a.btn.btn-link.btn-xs
+            i.fa.fa-save сохранить
+
+
 
 
 
