--- a/app/views/advertisements/_map.html.slim
+++ b/app/views/advertisements/_map.html.slim
@@ -3,4 +3,4 @@ legend Подробности
   .form-group
     label.control-label.col-sm-3 for="appendedtext"  На карте
     .col-sm-7
-      #map style="width: auto; height: 400px" data-latitude=@adv.latitude data-longitude=@adv.longitude data-editable=false
+      .map#map data-latitude=@adv.latitude data-longitude=@adv.longitude data-editable=false
