--- a/app/views/advertisements/_photos.html.erb
+++ b/app/views/advertisements/_photos.html.erb
@@ -12,7 +12,7 @@
         <div class="col-sm-9">
           <!-- The global progress bar -->
           <div class="progress progress-success progress-striped active fade">
-            <div class="bar" style="width:0%;"></div>
+            <div class="bar zero-width" ></div>
           </div>
         </div>
       </div>
@@ -46,7 +46,7 @@
     {% } else if (o.files.valid && !i) { %}
     <td>
     <div class="progress">
-      <div class="progress-bar progress-bar-striped active"  role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+      <div class="progress-bar progress-bar-striped active zero-width"  role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" >
         <span class="sr-only">0%</span>
       </div>
     </div>
