--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -6,19 +6,20 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      p.pull-left
+      span.pull-left
         a.navbar-brand href="/" 
           i.fa.fa-database.fa-lg
           '
-          | Multilisting.su
+          | multilisting.su
     .collapse.navbar-collapse
-      ul.nav.navbar-nav.navbar-right style=("padding-left: 15px") 
+      ul.nav.navbar-nav.navbar-right
         - unless current_user.present?
-          p.nav.navbar-text
-            i.fa.fa-key
-            '
-            = link_to 'Регистрация', new_user_registration_path, class: 'navbar-link'
-        li.dropdown.nav
+          li.nav.navbar-nav
+            =link_to new_user_registration_path
+              .navbar-link
+                i.fa.fa-plug.fa-flip-vertical
+                | Зарегистрироваться
+        li.nav.navbar-nav
           - if @current_user
             .button.btn.navbar-btn.btn-default data-toggle="modal" data-target=".log_out_modal"
               .i.fa.fa-sign-out
@@ -40,7 +41,7 @@
                       | Отмена
           - else
             .button.btn.navbar-btn.btn-default data-toggle="modal" data-target=".sign_in_modal"
-              .i.fa.fa-sign-in
+              i.fa.fa-lock
                 '
                 |Войти
             .modal.fade.sign_in_modal aria-hidden="true" aria-labelledby="Авторизация" role="dialog"
@@ -66,16 +67,24 @@
                         '
                         | Войти
 
-
-
       ul.nav.navbar-nav.navbar-left
+        li.nav.navbar-nav
+          .navbar-btn.nav-font-color
+            = link_to new_advertisement_path
+              .btn.btn-warning
+                i.fa.fa-bullhorn.fa-lg
+                '
+                |Разместить объявление
+
+      /ul.nav.navbar-nav.navbar-left
         li
           = link_to  new_advertisement_path
-            i.fa.fa-plus.fa-lg
-            '
-            | Добавить
+            .btn.navbar-btn.btn-warning
+              i.fa.fa-bullhorn.fa-lg
+              '
+              | Разместить объявление
 
-        -if @root_section.present?
+        /-if @root_section.present?
           li
             a href=rails_admin.edit_path(model_name: 'section', id: @root_section.id)
               i.fa.fa-tag.fa-lg
