--- a/app/assets/stylesheets/advertisement.css.scss
+++ b/app/assets/stylesheets/advertisement.css.scss
@@ -41,3 +41,10 @@
   width: 600px;
   height: 400px;
 }
+.width-define{
+  width: 110px;
+}
+.search-result-header{
+  margin: 0em;
+  font-size: 1.8em;
+}
