--- a/app/views/advertisements/_search_form.html.slim
+++ b/app/views/advertisements/_search_form.html.slim
@@ -1,82 +1,80 @@
 .well.well-sm
   = form_tag root_path, method: :get, class: 'form form-inline', role:'form'
-    /.form.form-inline
-    /.row
-      span.h2
-        i.fa.fa-crosshairs.fa-lg
-        '
-        | Удобный поиск точно в цель
-    .form-group
-      label
-        i.fa.fa-share.fa-lg
-        '
-        | предложение
-    '
-    .btn-group data-toggle="buttons"
-       - [:sale, :for_rent, :day].each do |offer|
-        - active = ((@section.present? ? [@section.attributes[:offer_type.to_s].to_s] : params[:advertisement][:offer_type]) || []).include?(AdvEnums::OFFER_TYPES.index(offer).to_s)
-        label.btn.btn-default class="#{'active' if active}"
-          input type="checkbox" name="advertisement[offer_type][]" value="#{AdvEnums::OFFER_TYPES.index(offer)}" checked=active = t("advertisement.offer.#{offer}")
-    '
-    label.control-label
-      i.fa.fa-reply.fa-lg
-      '
-      | спрос
-    '
-    .btn-group data-toggle="buttons"
-      - [:buy, :rent].each do |offer|
-        - active = ((@section.present? ? [@section.attributes[:offer_type.to_s].to_s] : params[:advertisement][:offer_type]) || []).include?(AdvEnums::OFFER_TYPES.index(offer).to_s)
-        label.btn.btn-default class="#{'active' if active}"
-          input type="checkbox" name="advertisement[offer_type][]" value="#{AdvEnums::OFFER_TYPES.index(offer)}" checked=active = t("advertisement.offer.#{offer}")
-    '
-    /ARE we seriously do not need this checkbox????
-    /.btn-group data-toggle="buttons"
-      label.btn.btn-success class="#{('active' if params[:advertisement][:not_for_agents]=='1')}"
-        i.fa.fa-ban.fa-lg
-        '
-        input type="checkbox" name="advertisement[not_for_agents]" value="1" checked=(params[:advertisement][:not_for_agents]=='1')
-          | без агентов
+    /What a hell with this css??
+    .row.col-xs-12
+      .form-group
+        label
+          i.fa.fa-share.fa-lg
+          '
+          | предложение
+          '
 
-    .form-group
-      label.control-label
-        i.fa.fa-building
-        '
-        | жилая
+        .btn-group data-toggle="buttons"
+           - [:sale, :for_rent, :day].each do |offer|
+            - active = ((@section.present? ? [@section.attributes[:offer_type.to_s].to_s] : params[:advertisement][:offer_type]) || []).include?(AdvEnums::OFFER_TYPES.index(offer).to_s)
+            label.btn.btn-default class="#{'active' if active}"
+              input type="checkbox" name="advertisement[offer_type][]" value="#{AdvEnums::OFFER_TYPES.index(offer)}" checked=active = t("advertisement.offer.#{offer}")
       '
-      .btn-group data-toggle="buttons"
-        - [:flat, :newbuild, :house, :ijs, :room, :garage].each do |category|
-          - active = ((@section.present? ? [@section.attributes[:category.to_s].to_s] : params[:advertisement][:category]) || []).include?(AdvEnums::CATEGORIES.index(category).to_s) || (@section.present? && @section.residental?)
-          label.btn.btn-default class="#{'active' if active}"
-            input type="checkbox" name="advertisement[category][]" value="#{AdvEnums::CATEGORIES.index(category)}" checked=active = t("advertisement.category.#{category}")
-    .form-group
-      label.control-label
-        i.fa.fa-briefcase
+      .form-group
+        label.control-label
+          i.fa.fa-reply.fa-lg
+          '
+          | спрос
         '
-        | коммерческая
-      '
-      .btn-group data-toggle="buttons"
-        - [:office, :trade, :storage, :cafe, :land, :free_appointment].each do |category|
-          - active = ((@section.present? ? [@section.attributes[:category.to_s].to_s] : params[:advertisement][:category]) || []).include?(AdvEnums::CATEGORIES.index(category).to_s) || (@section.present? && @section.commerce?)
-          label.btn.btn-default class="#{'active' if active}"
-            input type="checkbox" name="advertisement[category][]" value="#{AdvEnums::CATEGORIES.index(category)}" checked=active = t("advertisement.category.#{category}")
-    .col-xs-12.row.form-group
-      label
-        i.fa.fa-map-marker.fa-lg
+        .btn-group data-toggle="buttons"
+          - [:buy, :rent].each do |offer|
+            - active = ((@section.present? ? [@section.attributes[:offer_type.to_s].to_s] : params[:advertisement][:offer_type]) || []).include?(AdvEnums::OFFER_TYPES.index(offer).to_s)
+            label.btn.btn-default class="#{'active' if active}"
+              input type="checkbox" name="advertisement[offer_type][]" value="#{AdvEnums::OFFER_TYPES.index(offer)}" checked=active = t("advertisement.offer.#{offer}")
         '
-        | место
-      '
-      span.button-toolbar
-        .location-group multi=true state="#{@location_state}"
-          .button.btn.btn-default.btn-lg.GetChildren lid="#{0}" data-toggle="dropdown"
-            i.fa.fa-globe.fa-lg
-            '
-            | выберите местоположение
-            '
-            i.caret
-          - if @root_section.present?
-            - Section.child_for(@root_section.location_id).not_empty.each do |section|
-              = link_to section.title, section.url, class: 'button btn btn-default location_hide_action'
+      /ARE we seriously do not need this checkbox????
+      /.btn-group data-toggle="buttons"
+        label.btn.btn-success class="#{('active' if params[:advertisement][:not_for_agents]=='1')}"
+          i.fa.fa-ban.fa-lg
+          '
+          input type="checkbox" name="advertisement[not_for_agents]" value="1" checked=(params[:advertisement][:not_for_agents]=='1')
+            | без агентов
 
+      .form-group
+        label.control-label
+          i.fa.fa-building
+          '
+          | жилая
+        '
+        .btn-group data-toggle="buttons"
+          - [:flat, :newbuild, :house, :ijs, :hotel, :room, :garage].each do |category|
+            - active = ((@section.present? ? [@section.attributes[:category.to_s].to_s] : params[:advertisement][:category]) || []).include?(AdvEnums::CATEGORIES.index(category).to_s) || (@section.present? && @section.residental?)
+            label.btn.btn-default class="#{'active' if active}"
+              input type="checkbox" name="advertisement[category][]" value="#{AdvEnums::CATEGORIES.index(category)}" checked=active = t("advertisement.category.#{category}")
+      .form-group
+        label.control-label
+          i.fa.fa-briefcase
+          '
+          | коммерческая
+        '
+        .btn-group data-toggle="buttons"
+          - [:office, :trade, :storage, :cafe, :land].each do |category|
+            - active = ((@section.present? ? [@section.attributes[:category.to_s].to_s] : params[:advertisement][:category]) || []).include?(AdvEnums::CATEGORIES.index(category).to_s) || (@section.present? && @section.commerce?)
+            label.btn.btn-default class="#{'active' if active}"
+              input type="checkbox" name="advertisement[category][]" value="#{AdvEnums::CATEGORIES.index(category)}" checked=active = t("advertisement.category.#{category}")
+    .row
+      .col-xs-12.form-group
+        label
+          i.fa.fa-map-marker.fa-lg
+          '
+          | место
+        '
+        span.button-toolbar
+          .location-group multi=true state="#{@location_state}"
+            .button.btn.btn-default.btn-lg.GetChildren lid="#{0}" data-toggle="dropdown"
+              i.fa.fa-globe.fa-lg
+              '
+              | выберите местоположение
+              '
+              i.caret
+            - if @root_section.present?
+              - Section.child_for(@root_section.location_id).not_empty.each do |section|
+                = link_to section.title, section.url, class: 'button btn btn-default location_hide_action'
     .row
       .col-sm-9.col-xs-12
         .form-group
@@ -85,11 +83,11 @@
             '
             | цена
           '
-          input.text-input-lg.form-control  placeholder="от" name="advertisement[price_from]" type="text" value=params[:advertisement][:price_from]
+          input.text-input-lg.width-define  placeholder="" name="advertisement[price_from]" type="text" value=params[:advertisement][:price_from]
           '
           label —
           '
-          input.text-input-lg.form-control  placeholder="до" name="advertisement[price_to]" type="text" value=params[:advertisement][:price_to]
+          input.text-input-lg.width-define  placeholder="" name="advertisement[price_to]" type="text" value=params[:advertisement][:price_to]
           '
           /MMM... Needs to implement logic here!!
           .btn-group
@@ -141,9 +139,15 @@
           input.text-input-sx#exampleInputPassword2  type="text" /
         '
         .form-group
-          | за всё время
-          '
-          .input-prepend.input-group
+          label
+            i.fa.fa-calendar
+          .btn.btn-default.btn-xs.range_date_picker_action
+            input.range_date_picker_input name="advertisement[date_interval]" type="hidden" value=params[:advertisement][:date_interval].presence
+            | за всё время
+            span.caret
+
+
+          /.input-prepend.input-group
             span.add-on.input-group-addon
               i.glyphicon.glyphicon-calendar.fa.fa-calendar
             input.range_date_picker_action.form-control name="advertisement[date_interval]" type="text" value=params[:advertisement][:date_interval].presence
@@ -161,7 +165,9 @@
                   a href="#"  по дате
         '
         .form-group
-            input.text-input-xl.form-control placeholder="ключевые слова, № телефона или объявления" type="text" name="advertisement[description]" value=params[:advertisement][:description]
+          label
+            i.fa.fa-file-text-o
+          input.text-input-xl.form-control placeholder="текст или №" type="text" name="advertisement[description]" value=params[:advertisement][:description]
       .col-sm-3
         button.btn.btn-primary.btn-lg.pull-left type="submit"
           i.fa.fa-search.fa-lg
