--- a/app/views/advertisements/_search_results.html.slim
+++ b/app/views/advertisements/_search_results.html.slim
@@ -1,13 +1,26 @@
+h1.search-result-header
+  i.fa.fa-home
+    | База недвижимости №1
+p
+  i.fa.fa-list
+    | Сайт на котором
+    ="  #{Advertisement.count}  "
+    | объявлений недвижимости профильтрованы от повторов и заманух с помощью рейтинга:
+    '
+    a href="#"
+      | принцип работы
+      i.fa.fa-info-circle
 ul.no-padding
   - @search_results.each_with_index do |adv, index|
     li.media.adv_item class="#{'adv_item_even' if index % 2 == 0}"
       span.col-xs-12.col-md-1.text-muted.small
         = l adv.created_at
-        a.btn-link href="#"
-          i.fa.fa-star-o.fa-lg
-        '
-        a.btn-link href=edit_advertisement_path(adv)
-          i.fa.fa-edit.fa-lg
+        -if can? :manage, adv
+          a.btn-link href="#"
+            i.fa.fa-star-o.fa-lg
+          '
+          a.btn-link href=edit_advertisement_path(adv)
+            i.fa.fa-edit.fa-lg
 
       .media-object.pull-left.preview-url
         - if adv.preview_url.present?
